description in provide type Add for licence removing the colour of pop up link Complete font change Response alignment fix

--- a/mockup/custom_default.css
+++ b/mockup/custom_default.css
@@ -846,4 +846,9 @@ md-datepicker.md-default-theme, md-datepicker
 	 top: 0;
 	 left: 0;
 	 margin-left: 9px;
+ }
+ .sticky2 {
+     position: fixed !important;
+     width: 98% !important;
+     margin-top: -20px!important;
   }
